--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,56 +6,95 @@
     <title>Technodom</title>
   </head>
   <body class="page">
-    
     <section class="card">
       <ul class="card__list">
-          <li class="card__item">
-              <div class="card__sticker">
-                <p>men's clothing</p> </div>
-              <div class="card__image"> <img src="public/images/image1.png" alt="синий рюкзак"></div>
-              <div class="card__text">
-                  <h2 class="card__title">Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops</h2>
-                  <p class="card__description">Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday</p>
-              </div>
-              <p class="card__price">109.9 $</p>
-              <div class="card__button"><button class="card__button--delete">Удалить</button></div>
-          </li>
-          <li class="card__item">
-            <div class="card__sticker">
-              <p>men's clothing</p> </div>
-            <div class="card__image"> <img src="public/images/image1.png" alt="синий рюкзак"></div>
-            <div class="card__text">
-                <h2 class="card__title">Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops</h2>
-                <p class="card__description">Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday</p>
-            </div>
-            <p class="card__price">109 $</p>
-            <div class="card__button"><button class="card__button--delete">Удалить</button></div>
+        <li class="card__item">
+          <div class="card__sticker">
+            <p>men's clothing</p>
+          </div>
+          <div class="card__image">
+            <img src="public/images/image1.png" alt="синий рюкзак" />
+          </div>
+          <div class="card__text">
+            <h2 class="card__title">
+              Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
+            </h2>
+            <p class="card__description">
+              Your perfect pack for everyday use and walks in the forest. Stash
+              your laptop (up to 15 inches) in the padded sleeve, your everyday
+            </p>
+          </div>
+          <p class="card__price">109.9 $</p>
+          <div class="card__button">
+            <button class="card__button--delete">Удалить</button>
+          </div>
         </li>
         <li class="card__item">
-            <div class="card__sticker">
-              <p>men's clothing</p> </div>
-            <div class="card__image"> <img src="public/images/image1.png" alt="синий рюкзак"></div>
-            <div class="card__text">
-                <h2 class="card__title">Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops</h2>
-                <p class="card__description">Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday</p>
-            </div>
-            <p class="card__price">109 $</p>
-            <div class="card__button"><button class="card__button--delete">Удалить</button></div>
+          <div class="card__sticker">
+            <p>men's clothing</p>
+          </div>
+          <div class="card__image">
+            <img src="public/images/image1.png" alt="синий рюкзак" />
+          </div>
+          <div class="card__text">
+            <h2 class="card__title">
+              Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
+            </h2>
+            <p class="card__description">
+              Your perfect pack for everyday use and walks in the forest. Stash
+              your laptop (up to 15 inches) in the padded sleeve, your everyday
+            </p>
+          </div>
+          <p class="card__price">109 $</p>
+          <div class="card__button">
+            <button class="card__button--delete">Удалить</button>
+          </div>
         </li>
         <li class="card__item">
-            <div class="card__sticker">
-              <p>men's clothing</p> </div>
-            <div class="card__image"> <img src="public/images/image1.png" alt="синий рюкзак"></div>
-            <div class="card__text">
-                <h2 class="card__title">Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops</h2>
-                <p class="card__description">Your perfect pack for everyday use and walks in the forest. Stash your laptop (up to 15 inches) in the padded sleeve, your everyday</p>
-            </div>
-            <p class="card__price">109 $</p>
-            <div class="card__button"><button class="card__button--delete">Удалить</button></div>
+          <div class="card__sticker">
+            <p>men's clothing</p>
+          </div>
+          <div class="card__image">
+            <img src="public/images/image1.png" alt="синий рюкзак" />
+          </div>
+          <div class="card__text">
+            <h2 class="card__title">
+              Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
+            </h2>
+            <p class="card__description">
+              Your perfect pack for everyday use and walks in the forest. Stash
+              your laptop (up to 15 inches) in the padded sleeve, your everyday
+            </p>
+          </div>
+          <p class="card__price">109 $</p>
+          <div class="card__button">
+            <button class="card__button--delete">Удалить</button>
+          </div>
+        </li>
+        <li class="card__item">
+          <div class="card__sticker">
+            <p>men's clothing</p>
+          </div>
+          <div class="card__image">
+            <img src="public/images/image1.png" alt="синий рюкзак" />
+          </div>
+          <div class="card__text">
+            <h2 class="card__title">
+              Fjallraven - Foldsack No. 1 Backpack, Fits 15 Laptops
+            </h2>
+            <p class="card__description">
+              Your perfect pack for everyday use and walks in the forest. Stash
+              your laptop (up to 15 inches) in the padded sleeve, your everyday
+            </p>
+          </div>
+          <p class="card__price">109 $</p>
+          <div class="card__button">
+            <button class="card__button--delete">Удалить</button>
+          </div>
         </li>
       </ul>
       <button class="card__button--more">Показать ещё</button>
-  </section>
+    </section>
 
     <script type="module" src="/src/js/main.js"></script>
   </body>
