--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technodom</title>
   </head>
-  <body class="page">
+  <body>
     <section class="card">
       <ul class="card__list">
         <li class="card__item">
